tests/rosetta/out/Java/bioinformatics-global-alignment.error
javac error: exit status 1
/tmp/TestMochiToJavabioinformatics-global-alignment2931457577/001/BioinformaticsGlobalAlignment.java:101: error: incompatible types: String cannot be converted to List<String>
            List<String> s1 = arr.get(i);
                                     ^
/tmp/TestMochiToJavabioinformatics-global-alignment2931457577/001/BioinformaticsGlobalAlignment.java:105: error: incompatible types: List<String> cannot be converted to String
                if (j != i && containsStr(arr.get(j), s1)) {
                                                      ^
/tmp/TestMochiToJavabioinformatics-global-alignment2931457577/001/BioinformaticsGlobalAlignment.java:112: error: incompatible types: List<String> cannot be converted to String
                filtered.add(s1);
                             ^
/tmp/TestMochiToJavabioinformatics-global-alignment2931457577/001/BioinformaticsGlobalAlignment.java:131: error: incompatible types: List<String> cannot be converted to List<List<String>>
            List<List<String>> perm = perms.get(idx);
                                               ^
/tmp/TestMochiToJavabioinformatics-global-alignment2931457577/001/BioinformaticsGlobalAlignment.java:132: error: incompatible types: List<String> cannot be converted to List<List<String>>
            List<List<String>> sup = perm.get(0);
                                             ^
/tmp/TestMochiToJavabioinformatics-global-alignment2931457577/001/BioinformaticsGlobalAlignment.java:135: error: incompatible types: List<String> cannot be converted to String
                int ov = headTailOverlap(perm.get(i), perm.get(i + 1));
                                                 ^
/tmp/TestMochiToJavabioinformatics-global-alignment2931457577/001/BioinformaticsGlobalAlignment.java:136: error: cannot find symbol
                sup = sup + ((Number)perm.get(i + 1).substring(ov, perm.get(i + 1).size())).doubleValue();
                                                    ^
  symbol:   method substring(int,int)
  location: interface List<String>
/tmp/TestMochiToJavabioinformatics-global-alignment2931457577/001/BioinformaticsGlobalAlignment.java:136: error: bad operand types for binary operator '+'
                sup = sup + ((Number)perm.get(i + 1).substring(ov, perm.get(i + 1).size())).doubleValue();
                          ^
  first type:  List<List<String>>
  second type: double
/tmp/TestMochiToJavabioinformatics-global-alignment2931457577/001/BioinformaticsGlobalAlignment.java:140: error: incompatible types: List<List<String>> cannot be converted to String
                shortest = sup;
                           ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
9 errors
